Fixed cards being wrong width during search

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -208,8 +208,8 @@ body {
 
 #pages>div {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 #right-side {
@@ -229,7 +229,7 @@ body {
 
 // Card Buttons
 .page-buttons, .news-buttons {
-    margin-left: auto;
+    margin: auto 0px 0px auto;
 }
 
 .page-buttons>button, .news-buttons>button {
